force-app/main/default/objects/Pricing_Item__c/Pricing_Item__c.object-meta.xml
<CustomObject>
    <label>Pricing Item</label>
    <nameField>
        <displayFormat>PIN - {0000}</displayFormat>
        <label>Pricing Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>