force-app/main/default/objects/Pricing_Item__c/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinic</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Pricing Item</relationshipLabel>
    <relationshipName>Pricing_Item</relationshipName>
    <type>Lookup</type>
</CustomField>