force-app/main/default/objects/Pricing_Item__c/fields/Estimated_Out_of_Pocket_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Out_of_Pocket_Cost__c</fullName>
    <label>Estimated Out of Pocket Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>