force-app/main/default/objects/Pricing_Item__c/fields/Linked_Medicare_Item__c.field-meta.xml
<CustomField>
    <fullName>Linked_Medicare_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Medicare Item</label>
    <referenceTo>Medicare_Items__c</referenceTo>
    <relationshipLabel>Pricing Item</relationshipLabel>
    <relationshipName>Pricing_Item</relationshipName>
    <type>Lookup</type>
</CustomField>