force-app/main/default/objects/Pricing_Item__c/fields/OOP_Formula__c.field-meta.xml
<CustomField>
    <fullName>OOP_Formula__c</fullName>
    <formula>Price__c -  Estimated_Medicare_Rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OOP Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>