force-app/main/default/objects/Pricing_Item__c/fields/Related_To_Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Cycle_Type__c</fullName>
    <label>Related To Cycle Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cycle_Types</valueSetName>
    </valueSet>
</CustomField>