force-app/main/default/objects/Pricing_Item__c/fields/Service_Item_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Service_Item_Name_Text__c</fullName>
    <formula>Linked_Service_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Item Name (Text)</label>
    <type>Text</type>
</CustomField>