force-app/main/default/objects/Pricing_Item__c/recordTypes/Medicare_Item.recordType-meta.xml
<RecordType>
    <fullName>Medicare_Item</fullName>
    <active>true</active>
    <label>Medicare Item</label>
</RecordType>