force-app/main/default/objects/Pricing_Item__c/recordTypes/Service_Items.recordType-meta.xml
<RecordType>
    <fullName>Service_Items</fullName>
    <active>true</active>
    <label>Service Items</label>
</RecordType>