force-app/main/default/objects/Pricing_Item__c/listViews/All_Pricing_Items.listView-meta.xml
<ListView>
    <fullName>All_Pricing_Items</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Price__c</columns>
    <columns>Pricing_Type__c</columns>
    <columns>Linked_Medicare_Item__c</columns>
    <columns>Linked_Service_Item__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pricing Items</label>
</ListView>